<resources>
    <string name="app_name">ProyectoFSs</string>
    <string name="TItuloP">Copia de <br /> mercado libre</string>
    <string name="TituloB">¡Tu peor opción!</string>
    <string name="login">Iniciar sesión</string>
    <string name="registrase">Registrase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmar_contrase_a">confirmar contraseña</string>
    <string name="contrase_a">contraseña</string>
    <string name="correo">correo</string>
    <string name="nombre">nombre</string>
    <string name="nombre_de_usuaio">nombre de usuaio</string>
    <string name="inicio">Inicio</string>
    <string name="categorias">Categorias</string>
</resources>